Fix z-index for sidenav

--- a/src/styles.less
+++ b/src/styles.less
@@ -127,3 +127,7 @@ ngx-gallery-preview.ngx-gallery-active {
   margin-top: 100px !important;
   height: calc(~'100% - 100px') !important;
 }
+
+.mat-drawer.mat-drawer-side {
+  z-index: 200;
+}
